--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@unimodules/core": "^7.1.2",
+    "axios": "^1.8.4",
     "expo": "~52.0.46",
-    "expo-app-loading": "^2.1.1",
+    "expo-app-loading": "^1.1.2",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
