--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.3.0",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "^8.2.0",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "@unimodules/core": "^7.1.2",
     "axios": "^1.8.4",
     "expo": "~52.0.46",
-    "expo-app-loading": "^1.1.2",
     "expo-font": "~13.0.4",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0"
   },
