--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo/config-plugins": "~9.0.0",
     "@expo/prebuild-config": "^8.2.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
