Push notification added. Making the Application details section.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 node_modules/
-.google-services.json
-.sgeapp-cd230-firebase-adminsdk-fbsvc-d558d442da.json
+google-services.json
+sgeapp-cd230-firebase-adminsdk-fbsvc-d558d442da.json
 
 # Expo
 .expo/
