--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo/config-plugins": "~9.0.0",
     "@expo/prebuild-config": "^8.2.0",
+    "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
     "expo": "~52.0.46",
+    "expo-clipboard": "~7.0.1",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
+    "expo-notifications": "~0.29.14",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "jszip": "^3.10.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -30,15 +37,12 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "expo-notifications": "~0.29.14",
-    "expo-device": "~7.0.3",
-    "expo-constants": "~17.0.8",
-    "expo-clipboard": "~7.0.1"
+    "react-native-zip-archive": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "^5.3.3",
-    "@types/react": "~18.3.12"
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
