--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "13.12.5",
     "react-native-zip-archive": "^7.0.1"
   },
   "devDependencies": {
