--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.12.5",
     "react-native-zip-archive": "^7.0.1"
