--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/prebuild-config": "^8.2.0",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -41,7 +42,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.12.5",
-    "react-native-zip-archive": "^7.0.1"
+    "react-native-zip-archive": "^7.0.1",
+    "expo-document-picker": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
