--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@expo/config-plugins": "~9.0.0",
     "@expo/prebuild-config": "^8.2.0",
     "@gorhom/bottom-sheet": "^5.1.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
-    "expo": "~52.0.0",
+    "expo": "~52.0.46",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
@@ -27,7 +27,6 @@
     "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
-    "expo-modules-core": "~2.3.12",
     "expo-notifications": "~0.29.14",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -35,7 +34,6 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
@@ -46,7 +44,8 @@
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.12.5",
-    "react-native-zip-archive": "^7.0.1"
+    "react-native-zip-archive": "^7.0.1",
+    "@react-native-community/netinfo": "11.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
