--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/prebuild-config": "^8.2.0",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
@@ -37,15 +38,19 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-size-matters": "^0.4.2",
     "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.12.5",
     "react-native-zip-archive": "^7.0.1",
-    "@react-native-community/netinfo": "11.4.1"
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
