--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/prebuild-config": "^8.2.0",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -21,6 +22,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
     "expo": "~52.0.46",
+    "expo-application": "~6.0.2",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.8",
     "expo-device": "~7.0.3",
@@ -33,9 +35,13 @@
     "expo-status-bar": "~2.0.1",
     "jszip": "^3.10.1",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-date-picker": "^5.0.12",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.22.43",
     "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
@@ -46,12 +52,10 @@
     "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-native-zip-archive": "^7.0.1",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1",
-    "expo-application": "~6.0.2"
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
